@@ -3,15 +3,13 @@ package com.zgl.swsad.authorization.manager;
 import com.zgl.swsad.authorization.model.TokenModel;
 import com.zgl.swsad.config.Constants;
 import com.zgl.swsad.util.HMACSHA256Util;
-import jdk.nashorn.internal.parser.Token;
+//import jdk.nashorn.internal.parser.Token;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.serializer.JdkSerializationRedisSerializer;
 import org.springframework.stereotype.Component;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
 import javax.annotation.Resource;
 import java.io.IOException;
 import java.util.Date;
@@ -23,17 +21,17 @@ import com.alibaba.fastjson.JSON;
 @Component
 public class JWTTokenManager implements TokenManager {
 
-    final BASE64Encoder encoder = new BASE64Encoder();
-    final BASE64Decoder decoder = new BASE64Decoder();
+    final Base64.Decoder decoder = Base64.getDecoder();
+    final Base64.Encoder encoder = Base64.getEncoder();
 
     public String createToken(Long userId, Boolean valid) throws Exception {
         Date createDate = new Date();
-        String text0 = encoder.encode(userId.toString().getBytes());
-        String text1 = encoder.encode(createDate.toString().getBytes());
-        String text2 = encoder.encode(valid.toString().getBytes());
+        String text0 = encoder.encodeToString(userId.toString().getBytes());
+        String text1 = encoder.encodeToString(createDate.toString().getBytes());
+        String text2 = encoder.encodeToString(valid.toString().getBytes());
         String signature = HMACSHA256Util.HMACSHA256(text0 + text1+text2, Constants.TOKEN_KEY);
         TokenModel token = new TokenModel(userId, createDate, valid, signature);
-        String tokenString = encoder.encode(JSON.toJSONString(token).getBytes());
+        String tokenString = encoder.encodeToString(JSON.toJSONString(token).getBytes());
         return tokenString;
     }
 
@@ -42,7 +40,7 @@ public class JWTTokenManager implements TokenManager {
             return null;
         }
 
-        byte[] bytes = decoder.decodeBuffer(authentication);
+        byte[] bytes = decoder.decode(authentication);
         String decode = new String(bytes);
         TokenModel token = JSON.parseObject(decode, TokenModel.class);
         return token;
@@ -56,9 +54,9 @@ public class JWTTokenManager implements TokenManager {
         Date createDate = model.getCreateDate();
         Boolean valid = model.getValid();
         String real_signature = model.getSignature();
-        String text0 = encoder.encode(userId.toString().getBytes());
-        String text1 = encoder.encode(createDate.toString().getBytes());
-        String text2 = encoder.encode(valid.toString().getBytes());
+        String text0 = encoder.encodeToString(userId.toString().getBytes());
+        String text1 = encoder.encodeToString(createDate.toString().getBytes());
+        String text2 = encoder.encodeToString(valid.toString().getBytes());
         String signature = HMACSHA256Util.HMACSHA256(text0 + text1+text2, Constants.TOKEN_KEY);
 
         if(!real_signature.equals(signature))
